syntax = "proto3";

package HeartRateMonitor.v1;

option go_package = "github.com/chetanborase/grpc-server-side-streaming/gen/go/HeartRateMonitor/v1;hrmpb";

service HeartRateMonitorService {
  rpc BeatsPerMinute(BeatsPerMinuteRequest) returns (stream BeatsPerMinuteResponse) {};
}

message BeatsPerMinuteRequest {
  string uuid = 1;
}

message BeatsPerMinuteResponse {
  uint32 value  = 1;
  uint32 minute = 2;
}
